--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
   margin:0;
   padding:0;
-  color:#8999a8;
+  color:#ffffff;
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size:20px;
 }
@@ -91,7 +91,7 @@ main header .intro-text{max-width:675px;text-align:center;margin-bottom:30px;
 }
 main header .intro-text .skills{font-size:1.15em;
 }
-main section{background:url('http://rmtch.wpengine.com/wp-content/uploads/2015/01/Home-Network-Bubbles1.jpg') no-repeat center center fixed;padding:40px 0;
+main section{background:url('image\Home-Network-Bubbles1.jpg') no-repeat center center fixed;padding:40px 0;
 }
 main section#contact>div{margin:0px auto;
 }
